@@ -152,6 +152,7 @@ typedef enum {
 /// OS process
 typedef struct proc Proc;
 typedef void (*proc_exit_cb)(Proc *proc, int status, void *data);
+typedef void (*proc_state_cb)(Proc *proc, bool suspended, void *data);
 typedef void (*internal_proc_cb)(Proc *proc);
 
 struct proc {
@@ -169,6 +170,7 @@ struct proc {
   RStream out, err;
   /// Exit handler. If set, user must call proc_free().
   proc_exit_cb cb;
+  proc_state_cb state_cb;
   internal_proc_cb internal_exit_cb, internal_close_cb;
   bool closed, detach, overlapped, fwd_err;
   MultiQueue *events;
