@@ -9,6 +9,7 @@
 
 typedef void (*terminal_write_cb)(const char *buffer, size_t size, void *data);
 typedef void (*terminal_resize_cb)(uint16_t width, uint16_t height, void *data);
+typedef void (*terminal_resume_cb)(void *data);
 typedef void (*terminal_close_cb)(void *data);
 
 typedef struct {
@@ -16,6 +17,7 @@ typedef struct {
   uint16_t width, height;
   terminal_write_cb write_cb;
   terminal_resize_cb resize_cb;
+  terminal_resume_cb resume_cb;
   terminal_close_cb close_cb;
   bool force_crlf;
 } TerminalOptions;
