@@ -100,11 +100,11 @@ describe('TUI', function()
       ]])
     else -- resuming works on other platforms
       screen:expect([[
-        ^                                                  |
                                                           |*5
+        ^[Process suspended]                               |
         {5:-- TERMINAL --}                                    |
       ]])
-      exec_lua([[vim.uv.kill(vim.fn.jobpid(vim.bo.channel), 'sigcont')]])
+      n.feed('<Space>')
       screen:expect(s0)
     end
     feed_data(':')
@@ -4409,7 +4409,6 @@ describe('TUI client', function()
   it('suspend/resume works with multiple clients', function()
     t.skip(is_os('win'), 'N/A for Windows')
     local server_super, screen_server, screen_client = start_tui_and_remote_client()
-    local server_super_exec_lua = tt.make_lua_executor(server_super)
 
     local screen_normal = [[
       Hello, Worl^d                                      |
@@ -4419,8 +4418,8 @@ describe('TUI client', function()
       {5:-- TERMINAL --}                                    |
     ]]
     local screen_suspended = [[
-      ^                                                  |
                                                         |*5
+      ^[Process suspended]                               |
       {5:-- TERMINAL --}                                    |
     ]]
 
@@ -4433,12 +4432,12 @@ describe('TUI client', function()
     screen_server:expect({ grid = screen_suspended })
 
     -- Resume the remote client.
-    exec_lua([[vim.uv.kill(vim.fn.jobpid(vim.bo.channel), 'sigcont')]])
+    n.feed('<Space>')
     screen_client:expect({ grid = screen_normal })
     screen_server:expect({ grid = screen_suspended, unchanged = true })
 
     -- Resume the embedding client.
-    server_super_exec_lua([[vim.uv.kill(vim.fn.jobpid(vim.bo.channel), 'sigcont')]])
+    server_super:request('nvim_input', '<Space>')
     screen_server:expect({ grid = screen_normal })
     screen_client:expect({ grid = screen_normal, unchanged = true })
 
@@ -4448,7 +4447,7 @@ describe('TUI client', function()
     screen_server:expect({ grid = screen_suspended })
 
     -- Resume the remote client.
-    exec_lua([[vim.uv.kill(vim.fn.jobpid(vim.bo.channel), 'sigcont')]])
+    n.feed('<Space>')
     screen_client:expect({ grid = screen_normal })
     screen_server:expect({ grid = screen_suspended, unchanged = true })
 
@@ -4458,12 +4457,12 @@ describe('TUI client', function()
     screen_server:expect({ grid = screen_suspended, unchanged = true })
 
     -- Resume the embedding client.
-    server_super_exec_lua([[vim.uv.kill(vim.fn.jobpid(vim.bo.channel), 'sigcont')]])
+    server_super:request('nvim_input', '<Space>')
     screen_server:expect({ grid = screen_normal })
     screen_client:expect({ grid = screen_suspended, unchanged = true })
 
     -- Resume the remote client.
-    exec_lua([[vim.uv.kill(vim.fn.jobpid(vim.bo.channel), 'sigcont')]])
+    n.feed('<Space>')
     screen_client:expect({ grid = screen_normal })
     screen_server:expect({ grid = screen_normal, unchanged = true })
 
